# 381706-1_DenisOstapovich_AllLabs

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
List/: CMakeLists.txt  main.cpp
ListLib/: CMakeLists.txt  elem.h  list.h
ListOnArray/: CMakeLists.txt  main.cpp
ListOnArrayLib/: CMakeLists.txt  listonarray.h
ListOnArrayTest/: CMakeLists.txt  ListOnArray.cpp
ListTest/: CMakeLists.txt  ListTest.cpp  Test_main.cpp
Matrix/: CMakeLists.txt  main.cpp
MatrixLib/: CMakeLists.txt  matrix.cpp  matrix.h
MatrixTest/: CMakeLists.txt  MatrixTest.cpp
MultiStack/: CMakeLists.txt  main.cpp
MultiStackLib/: CMakeLists.txt  multistack.h  newstack.h
MultiStackTest/: CMakeLists.txt  MultiStackTest.cpp
Polynomials/: CMakeLists.txt  main.cpp
PolynomialsLib/: CMakeLists.txt  monomial.cpp  monomial.h  polynomial.cpp  polynomial.h
PolynomialsTest/: CMakeLists.txt  PolynomialTest.cpp
Queue/: CMakeLists.txt  Queue_main.cpp
QueueLib/: CMakeLists.txt  queue.h
QueueTest/: CMakeLists.txt  QueueTest.cpp
RPN/: CMakeLists.txt  main.cpp
RPNLib/: CMakeLists.txt  mystring.cpp  mystring.h  rpn.cpp  rpn.h
RPNTest/: CMakeLists.txt  RPN_Test.cpp
Reports/: Report_ListOnArray.docx  Report_Lists.docx  Report_Matrix.docx  Report_MultiStack.docx  Report_Polynomials.docx  Report_Queue.docx  Report_Stack.docx  Report_StackOnLists.docx  Report_ViewTable.docx
Stack/: CMakeLists.txt  main.cpp
StackLib/: CMakeLists.txt  stack.h
StackOnLists/: CMakeLists.txt  main.cpp
StackOnListsLib/: CMakeLists.txt  stackonlists.h
StackOnListsTest/: CMakeLists.txt  StackOnListsTest.cpp  Test_main.cpp
StackTest/: CMakeLists.txt  StackTest.cpp
Vector/: CMakeLists.txt  main.cpp
VectorApp/: CMakeLists.txt  main.cpp
VectorLib/: CMakeLists.txt  VectorLib.h  main.cpp  vector.h
VectorTest/: CMakeLists.txt  VectorTest.cpp
ViewTable/: CMakeLists.txt  main.cpp
ViewTableLib/: CMakeLists.txt  telem.h  viewtable.cpp  viewtable.h
ViewTableTest/: CMakeLists.txt  ViewTableTest.cpp  test_main.cpp
